tests/compile-fail/m4-call-003-invalid-erasure.to
fn main() {
    var count = 0
    let increment = (): Int {
        count += 1
        count
    }
    let erased: fn(): Int = increment
    _ = erased
}
